<resources>
    <string name="app_name">Epilepsy Ireland: Epilepsy Management App</string>
    <string-array name="nav_drawer_items">
        <item>My Epilepsy Diary</item>
        <item>Record My Seizure</item>
        <item>My Daily Medications</item>
        <item>My Emergency Medications</item>
        <item>My Contacts</item>
        <item>My Appointments</item>
        <item>My Videos</item>
        <item>My Reports</item>
        <item>Email My Data</item>
        <item>Contact Us</item>
        <item>Terms And Conditions</item>
        <item>Logout</item>

    </string-array>
    <string-array name="yesno">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="questions">
        <item>In Which city were you born \?</item>
        <item>What is your first pet name \? </item>
        <item>What is your mother maiden name \?</item>
    </string-array>
    <string name="unit">Unit</string>
    <string name="create_seizure_type">Create Seizure Type</string>
    <string name="tab_to_record_video">Press To Record a Video</string>
    <string name="tab_to_send_sms">Emergency SMS Service</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account \?</string>
    <string name="sign_up"><![CDATA[<b><u>Sign up</u></b>]]></string>
    <string name="forget_password"><![CDATA[<b><u>Forgot Username/Password \?</u></b>]]></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="MedicationTitration">Medication Titration</string>
    <string name="title_activity_seizure_details">SeizureDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="record_seizure">Record Seizure</string>
    <string name="seizure_type">Seizure Type</string>
    <string name="seizure_duration">Seizure Duration</string>
    <string name="duration">Duration:</string>
    <string name="trigger">Triggers:</string>
    <string name="seizure_trigger">Trigger</string>
    <string name="select_triggers">Triggers</string>
    <string name="select_features">Features</string>
    <string name="select_seizures">Seizures</string>
    <string name="select_pre_features">Pre Features</string>
    <string name="select_post_features">Post Features</string>
    <string name="video">Video</string>
    <string name="link_video">Link Video</string>
    <string name="seizure_description">Seizure Description</string>
    <string name="description">Description:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="_data_data_">/data/data/</string>
    <string name="add_seizure_type">Add Seizure Type</string>
    <string name="add_seizure_type_desc">This screen allows you to create a short hand description of the different types of seizures that you may have. The seizure name is added as an option when you are recording seizures on your calendar</string>
    <string name="seizure_name">Seizure Name</string>
    <string name="seizure_name_hint">Enter Seizure Name</string>
    <string name="create_sms">Setup SMS</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="phone">Phone Number to send SMS to</string>
    <string name="message">Message to send</string>
    <string name="message_hint">Enter Message to Send</string>
    <string name="sms_confirmation_title">Confirmation</string>
    <string name="sms_confirmation_body">Confirm that you wish to send emergency SMS</string>
    <string name="message_title">Message:</string>
    <string name="recipent">Recipent:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_sms_defined">No SMS defined. Please create message in the app</string>
    <string name="sms_sent">SMS sent successfully.</string>
    <string name="sms_send_fail">SMS could not send. Check network settings.</string>
    <string name="create_trigger">Create Trigger</string>
    <string name="create_pre_feature">Create Pre Feature</string>
    <string name="create_During_Feature">Create During Feature</string>
    <string name="create_feature">Create Seizure Feature</string>
    <string name="create_Emergency">Create Emergency</string>
    <string name="create_Daily">Create Daily</string>
    <string name="medication_Type">Create Medication Type</string>
    <string name="seizure_Feature">Seizure Feature</string>
    <string name="more">More...</string>
    <string name="create_post_feature">Create Post Feature</string>
    <string name="other_info">Other Information</string>
    <string name="trigger_name">Trigger Name</string>
    <string name="trigger_name_hint">Enter Trigger Name</string>
    <string name="feature_name">Feature Name</string>
    <string name="feature_name_hint">Enter Feature Name</string>
    <string name="pre_feature_name">Pre Seizure Feature Name</string>
    <string name="pre_feature_name_hint">Enter Pre Seizure Feature Name</string>
    <string name="post_feature_name">Post Seizure Feature Name</string>
    <string name="post_feature_name_hint">Enter Post Seizure Feature Name</string>
    <string name="add_trigger">Add Trigger</string>
    <string name="add_trigger_desc">This screen allows you to create a short hand description of triggers you may have which are not in the pre-defined list. Triggers you add here can be selected when you are recording seizures on your calendar</string>
    <string name="add_feature">Add Feature</string>
    <string name="add_feature_desc">This screen allows you to create a short hand description of the seizure features you experience which are not in the pre-defined list. Features you add here can be selected when you are recording seizures on your calendar</string>
    <string name="add_pre_feature">Add Pre Seizure Feature</string>
    <string name="add_pre_feature_desc">This screen allows you to create a short hand description of the pre-seizure features you experience which are not in the pre-defined list. Features you add here can be selected when you are recording seizures on your calendar</string>
    <string name="add_post_feature">Add Post Seizure Feature</string>
    <string name="add_post_feature_desc">This screen allows you to create a short hand description of the post-seizure features you experience which are not in the pre-defined list. Features you add here can be selected when you are recording seizures on your calendar</string>
    <string name="emergency_medication_given">Emergency Med given</string>
    <string name="ambulance_called">Ambulance called</string>
    <string name="seizure_features">Seizure Features</string>
    <string name="pre_features">Pre Features</string>
    <string name="post_features">Post Features</string>
    <string name="info">I</string>
    <string name="medication">New Medication</string>
    <string name="appointmentReminder">APPOINTMENT REMINDERS</string>
    <string name="renewalDate">Renewal Date</string>
    <string name="prescriptionrenewalreminder">Prescription Renewal</string>
    <string name="Appointments">New Appointment</string>
    <string name="medication_name">Medication Name</string>
    <string name="appointment_with">Appointment with</string>
    <string name="medication_description">Medication Description</string>
    <string name="medication_images">Medication Images</string>
    <string name="medication_schedule">Medication Schedule</string>
    <string name="start_date">Start Date</string>
    <string name="datee">Date</string>
    <string name="dosage">Dosage</string>
    <string name="seizure_details_lbl">Seizure Details</string>
    <string name="ae_title_str">Email Seizure Events</string>
    <string name="ae_desc_str">This screen allows you to Email a report of your Seizure Events to your Doctor.</string>
    <string name="ae_to_date_label">Date To:</string>
    <string name="ae_from_date_label">Date From:</string>
</resources>