<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cpof_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    tools:ignore="InefficientWeight,ContentDescription" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/cpof_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_post_feature"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <View
                android:id="@+id/cpof_line"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/cpof_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/add_post_feature_desc" />

            <TextView
                android:id="@+id/cpof_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_feature_name" />

            <EditText
                android:id="@+id/cpof_post_feature_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_feature_name_hint"
                android:singleLine="true"
                android:windowSoftInputMode="adjustResize" />

            <TextView
                android:id="@+id/cpof_other_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_info" />

            <EditText
                android:id="@+id/cpof_post_feature_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other_info"
                android:maxLines="5"
                android:windowSoftInputMode="adjustResize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/cpof_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/red"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/delete" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cpof_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/green"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/save" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>