<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ae_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    tools:ignore="InefficientWeight,ContentDescription" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/ae_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ae_title_str"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <View
                android:id="@+id/ae_line"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/ae_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/ae_desc_str" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ae_from_date_label" />

            <EditText
                android:id="@+id/ae_from_date_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ae_to_date_label" />

            <EditText
                android:id="@+id/ae_to_date_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ae_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ae_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/ic_email" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>